--- a/pythonanywhere/templates/index.html
+++ b/pythonanywhere/templates/index.html
@@ -168,23 +168,22 @@
         let currentNoteId = null;
 
         async function fetchNotes() {
-            const response = await fetch("http://localhost:5000/notes", {
+            const response = await fetch("https://bosbes.eu.pythonanywhere.com/notes", {
                 headers: { Authorization: `Bearer ${sessionKey}` },
             });
             const notes = await response.json();
             const notesList = document.getElementById("notes-list");
             notesList.innerHTML = notes.map(note => `
                 <li>
-                    <span>${note.note}</span>
+                    <span onclick="showUpdateMenu(${note.id}, '${note.note}')">${note.note}</span>
                     <button onclick="deleteNote(${note.id})">Delete</button>
-                    <button onclick="showUpdateMenu(${note.id}, '${note.note}')">Update</button>
                 </li>
             `).join("");
         }
 
         async function addNote() {
             const noteText = document.getElementById("note-text").value;
-            await fetch("http://localhost:5000/notes", {
+            await fetch("https://bosbes.eu.pythonanywhere.com/notes", {
                 method: "POST",
                 headers: {
                     "Content-Type": "application/json",
@@ -196,7 +195,7 @@
         }
 
         async function deleteNote(noteId) {
-            await fetch(`http://localhost:5000/notes/${noteId}`, {
+            await fetch(`https://bosbes.eu.pythonanywhere.com/notes/${noteId}`, {
                 method: "DELETE",
                 headers: { Authorization: `Bearer ${sessionKey}` },
             });
@@ -206,7 +205,7 @@
         async function updateNote() {
             const updatedText = document.getElementById("update-note-text").value;
             if (currentNoteId) {
-                await fetch(`http://localhost:5000/notes/${currentNoteId}`, {
+                await fetch(`https://bosbes.eu.pythonanywhere.com/notes/${currentNoteId}`, {
                     method: "PUT",
                     headers: {
                         "Content-Type": "application/json",
