Add home page and update navigation links to improve user experience

--- a/pythonanywhere/templates/login.html
+++ b/pythonanywhere/templates/login.html
@@ -122,7 +122,7 @@
 
             if (response.ok) {
                 sessionStorage.setItem("session_key", data.session_key);
-                window.location.href = "/";
+                window.location.href = "/index";
             } else {
                 alert(data.error || "Login failed");
             }
