--- a/pythonanywhere/templates/account.html
+++ b/pythonanywhere/templates/account.html
@@ -133,7 +133,7 @@
 </head>
 <body>
     <header>
-        <a href="/" id="back-home">Back to Home</a>
+        <a href="/index" id="back-home">Back to Home</a>
         <h1>Account</h1>
     </header>
     <!-- Account Page Content -->
@@ -217,7 +217,7 @@
         });
 
         document.getElementById("back-home").addEventListener("click", () => {
-            window.location.href = "/";
+            window.location.href = "/index";
         });
     </script>
 </body>
