--- a/pythonanywhere/templates/login.html
+++ b/pythonanywhere/templates/login.html
@@ -32,6 +32,16 @@
             text-align: center;
             width: 100%;
             max-width: 400px;
+            opacity: 0; /* Initial state for animation */
+            transform: translateY(-20px); /* Initial position */
+            animation: fadeIn 1s ease-out forwards; /* Animation properties */
+        }
+
+        @keyframes fadeIn {
+            to {
+                opacity: 1;
+                transform: translateY(0);
+            }
         }
 
         form {
