--- a/pythonanywhere/templates/home.html
+++ b/pythonanywhere/templates/home.html
@@ -10,6 +10,7 @@
     <link rel="apple-touch-icon" sizes="180x180" href="static/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="static/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="static/favicon-16x16.png">
+    <link rel="favicon" type ="image/x-icon" href="static/favicon.ico">
     <link rel="manifest" href="static/site.webmanifest">
     <script type="application/ld+json">
     {
