--- a/pythonanywhere/templates/home.html
+++ b/pythonanywhere/templates/home.html
@@ -372,8 +372,7 @@
 <div id="download-overlay">
     <div class="content">
         <button class="close-btn">&times;</button>
-        <img src="static/download-icon.png" alt="Download Icon">
-        <button onclick="window.location.href='download/notes-app-windows.exe'">Download Now</button>
+        <p>There are no downloads available at this time. Please try again later!</p>
     </div>
 </div>
 
