--- a/pythonanywhere/templates/home.html
+++ b/pythonanywhere/templates/home.html
@@ -44,7 +44,11 @@
             background-color: #1E1E2E;
             padding: 20px;
             text-align: center;
+            position: sticky;
+            top: 0;
+            z-index: 1000; /* Ensures the header stays above other elements */
         }
+
 
         header h1 {
             font-size: 2.5rem;
@@ -358,7 +362,7 @@
 <section id="about">
     <h2>About Us</h2>
     <p>Future Notes was build as a hobby project, but turned into a fully functional application very fast.<br>
-    Join Future Notes today and never forget anything important again!</p>
+    Join Future Notes today and never forget anything again!</p>
 </section>
 
 <section id="contact">
@@ -372,6 +376,7 @@
 <div id="download-overlay">
     <div class="content">
         <button class="close-btn">&times;</button>
+        <img src="static/download-icon.png" alt="Download Icon">
         <p>There are no downloads available at this time. Please try again later!</p>
     </div>
 </div>
