Refactor HTML templates for improved styling and user experience

--- a/pythonanywhere/templates/signup.html
+++ b/pythonanywhere/templates/signup.html
@@ -163,7 +163,7 @@
 
     <div class="form-container">
         <h1>Sign up</h1>
-        <form id="login-form">
+        <form id="signup-form">
             <label for="username">Username:</label>
             <input type="text" id="username" required>
             <label for="password">Password:</label>
