Make site title clickable by wrapping it in a link

--- a/pythonanywhere/templates/index.html
+++ b/pythonanywhere/templates/index.html
@@ -214,7 +214,7 @@
 </head>
 <body>
     <header>
-        <h1>Future Notes</h1>
+        <a href="/"><h1>Future Notes</h1></a>
         <a href="/account_page">Account</a>
     </header>
     <main>
