--- a/pythonanywhere/templates/home.html
+++ b/pythonanywhere/templates/home.html
@@ -741,6 +741,7 @@
         <p>If you have any questions or feedback, feel free to reach out to us.<br>
             Email: <a href="mailto:nathanvcappellen@solcon.nl" id="email-link">nathanvcappellen@solcon.nl</a>
         </p>
+        <p>Alternatively, you can send us a direct message below:</p>
     
         <!-- New Form for Direct Messages -->
         <form id="contact-form">
