--- a/pythonanywhere/templates/login.html
+++ b/pythonanywhere/templates/login.html
@@ -179,7 +179,7 @@
             const username = document.getElementById("username").value;
             const password = document.getElementById("password").value;
 
-            const response = await fetch("https://bosbes.eu.pythonanywhere.com/login", {
+            const response = await fetch("/login", {
                 method: "POST",
                 headers: { "Content-Type": "application/json" },
                 body: JSON.stringify({ username, password }),
